--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,19 +28,15 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
+  width: 75%;
 }
 .container-outter{
   display: flex;
-  justify-content: center;
+  justify-content: left;
 }
 input {
-/* max-width: 400px; */
 height: 2em;
 background: #FFFFFF;
-/* Basic Shadow */
 box-shadow: 0px 5px 14px rgba(44, 67, 81, 0.13), 0px 0px 4px rgba(44, 67, 81, 0.02);
 border-radius: 2px;
 margin: 1.5em 0;
@@ -49,12 +45,17 @@ border-width: 0;
 label {
   font-size: 1.2em;
   color: #324350;
-  /* max-width: 400px; */
+}
+.form-container {
+  width: 75%;
+  margin-left: 25%;
 }
 
 form {
+  display: flex;
+  flex-direction: column;
   margin: 2em;
-  /* max-width: 50%; */
+  max-width: 50%;
 }
 
 button {
@@ -66,4 +67,42 @@ font-family: 'Lato', sans-serif;
 font-size: 1em;
 border-width: 0;
 width: 25%;
+}
+
+
+/* navbar styles */
+.navbar {
+  width: 215px;
+  background-color: var(--color-grayalt);
+  height: 100vh;
+  border-right: 2px solid var(--color-grayblue);
+  font-size: 14px;
+}
+
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.navbar li {
+  padding: 16px;
+  cursor: pointer;
+  font-weight: 300;
+}
+
+.navbar li:active, .navbar li:hover {
+  background-color: var(--color-grayfog);
+  font-weight: 400;
+}
+
+.navbar li a {
+  text-decoration: none;
+  color: var(--color-grayshadow50);
+  display: flex;
+  align-items: center;
+}
+
+.navbar li a img {
+  margin-right: 8px;
 }
